# wlr-lite-widget

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: cairo_render_test.rs  canvas_demo.rs  custom_skia_demo.rs  demo.rs  front_clock.rs  skia_render_test.rs
src/: backend_common.rs  cairo_surface.rs  layer.rs  lib.rs  mouse_handler.rs  settings.rs  skia_surface.rs  surface.rs  surface_common.rs  widget.rs  widget_builder.rs
src/backend_common/: image_loader.rs  rectangle.rs  surface_common.rs  text_shaper.rs
